--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,27 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="Quantidade de clientes:"/>
+        <Button
+            android:layout_width="53dp"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="+"
+            android:layout_gravity="center"
+            android:onClick="Positivo"
+            />
+
+        <ImageView
+            android:layout_width="79dp"
+            android:layout_height="94dp"
+            android:src="@drawable/burger"
+            android:layout_gravity="right" />
+
+
     </LinearLayout>
 
 
@@ -73,7 +94,16 @@
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
 
-        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:id="@+id/Numero"
+            android:textSize="60dp"
+            android:text="0"/>
+
+    </LinearLayout>
 
     </LinearLayout>
 </RelativeLayout>
